2006-09-24  Thomas Reitmayr  <treitmayr@yahoo.com>

	* yeaphone: initial version.
